--- a/labs/2.md
+++ b/labs/2.md
@@ -1,17 +1,2 @@
-<!-- ### **A growth mindset** is a way of thinking to make yourself keep goning whatever you faced challenges
-
-# There is a three reminders to still be in a growth mindset
-
-## *Embraces Cahllenges*
-
-## *Persists Obstacles*
-
-## *Effort let you gain some thing in the end*
-
-###### My name is **Alla** gratudated from Jordan University of Science and Technology. I also Working in two different universities gained me an extensive experience of doing experimental and theoretical research. In 2019 I was a research assistant at Jordan University, I was working on several projects with Prof.  -->
-
-<!-- ~~### Sami Mahmood~~
-
-![Re Zero](https://1.bp.blogspot.com/-lS3ajsgk7hs/XQEY93T8aYI/AAAAAAAAGDQ/IeyDBOJuZto9U1i-Ioryu96zKCAfR5RoACLcBGAs/s640/%255BAnimeSanka.com%255D%2BRZKHIS%2B-%2BOVA%2B%2BMS%2B%255BBluray%2B-%2B1080p%2B-%2BX265%255D.mkv_snapshot_00.13.44.458.jpg)
-
-[All Re Zero loops ](https://w.animesanka.com/2019/01/rezero-kara-hajimeru-isekai-seikatsu.html) -->
+One of the most basic beliefs we carry about ourselves, Dweck found in her research, has to do with how we view and inhabit what we consider to be our personality. A “fixed mindset” assumes that our character, intelligence, and creative ability are static givens which we can’t change in any meaningful way, and success is the affirmation of that inherent intelligence, an assessment of how those givens measure up against an equally fixed standard; striving for success and avoiding failure at all costs become a way of maintaining the sense of being smart or skilled. A “growth mindset,” on the other hand, thrives on challenge and sees failure not as evidence of unintelligence but as a heartening springboard for growth and for stretching our existing abilities. Out of these two mindsets, which we manifest from a very early age, springs a great deal of our behavior, our relationship with success and failure in both professional and personal contexts, and ultimately our capacity for happiness.
+![](mm.png)
