--- a/1.md
+++ b/1.md
@@ -10,3 +10,5 @@ I have also worked with Prof. Abdalla obeidat on the following projects:
 
 
 •	We have estimated the diffusion coefficients, velocity autocorrelation functions (VACF), density profile, and radial distribution functions (RDF) for six different mixtures. Self- and Maxwell-Stefan diffusion coefficients, as well as the surface tension of methanol, ethanol, and their hydrocarbons binary mixture are determined using equilibrium molecular dynamics and the Green-Kubo formalism using GROMACS 2018.3. 
+   <!-- ![](11.jpg){:height="300px" width="300px"}.                                 <img width="100%" src="photos/pranksta1.jpg">
+                                 ![](11.jpg/200/300?style=centerme) -->
